# fastapi

./: README.md  docker-compose.prod.yml  docker-compose.yml  ec2-launch.sh
.forgejo/workflows/: ci.yml
.github/workflows/: main.yaml  main.yml
ansible/: playbook.yml
app/: Dockerfile  conf.ini  main.py  pyproject.toml
app/src/api/: user_controller.py
app/src/core/: state.py
app/src/repository/: user_repository.py
app/src/service/: user_service.py
app/tests/: test_user_controller.py
db_dump/: tm.sql
nginx/: default.conf
terraform/: provider.tf
terraform/env/: dev.tfvars
terraform/regions/us-east-1/: main.tf  outputs.tf  variables.tf
