[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI app"
authors = ["Alex <alex987698@gmail.com>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
psycopg2-binary = "^2.9.10"
configparser = "*"
debugpy = "*"
pydantic = "*"
httpx = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"